@@ -532,24 +532,6 @@ name|SolrDispatchFilter
 operator|.
 name|Action
 operator|.
-name|PASSTHROUGH
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|servlet
-operator|.
-name|SolrDispatchFilter
-operator|.
-name|Action
-operator|.
 name|PROCESS
 import|;
 end_import
@@ -708,6 +690,7 @@ name|this
 operator|.
 name|path
 decl_stmt|;
+specifier|final
 name|String
 name|fullPath
 init|=
@@ -1253,7 +1236,7 @@ literal|null
 condition|)
 name|action
 operator|=
-name|PASSTHROUGH
+name|PROCESS
 expr_stmt|;
 if|if
 condition|(
@@ -2356,6 +2339,8 @@ name|SolrQueryResponse
 name|solrResp
 parameter_list|)
 block|{
+try|try
+block|{
 name|api
 operator|.
 name|call
@@ -2367,6 +2352,21 @@ argument_list|,
 name|solrResp
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|solrResp
+operator|.
+name|setException
+argument_list|(
+name|e
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_function
 
@@ -2382,6 +2382,54 @@ name|SolrQueryResponse
 name|rsp
 parameter_list|)
 block|{
+name|SolrCore
+operator|.
+name|preDecorateResponse
+argument_list|(
+name|solrReq
+argument_list|,
+name|rsp
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|api
+operator|==
+literal|null
+condition|)
+block|{
+name|rsp
+operator|.
+name|setException
+argument_list|(
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|NOT_FOUND
+argument_list|,
+literal|"Cannot find correspond api for the path : "
+operator|+
+name|solrReq
+operator|.
+name|getContext
+argument_list|()
+operator|.
+name|get
+argument_list|(
+name|CommonParams
+operator|.
+name|PATH
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
 try|try
 block|{
 name|api
@@ -2396,14 +2444,30 @@ expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
-name|RuntimeException
+name|Exception
 name|e
 parameter_list|)
 block|{
-throw|throw
+name|rsp
+operator|.
+name|setException
+argument_list|(
 name|e
-throw|;
+argument_list|)
+expr_stmt|;
 block|}
+block|}
+name|SolrCore
+operator|.
+name|postDecorateResponse
+argument_list|(
+name|handler
+argument_list|,
+name|solrReq
+argument_list|,
+name|rsp
+argument_list|)
+expr_stmt|;
 block|}
 end_function
 
