@@ -58,6 +58,22 @@ name|client
 operator|.
 name|solrj
 operator|.
+name|ResponseParser
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
 name|SolrRequest
 import|;
 end_import
@@ -92,7 +108,43 @@ name|solrj
 operator|.
 name|impl
 operator|.
+name|BinaryResponseParser
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|impl
+operator|.
 name|CloudSolrClient
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|impl
+operator|.
+name|XMLResponseParser
 import|;
 end_import
 
@@ -129,6 +181,24 @@ operator|.
 name|request
 operator|.
 name|V2Request
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|response
+operator|.
+name|DelegationTokenResponse
 import|;
 end_import
 
@@ -394,6 +464,266 @@ name|getStatus
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+DECL|method|testException
+specifier|private
+name|void
+name|testException
+parameter_list|(
+name|ResponseParser
+name|responseParser
+parameter_list|,
+name|int
+name|expectedCode
+parameter_list|,
+name|String
+name|path
+parameter_list|,
+name|String
+name|payload
+parameter_list|)
+throws|throws
+name|IOException
+throws|,
+name|SolrServerException
+block|{
+name|V2Request
+name|v2Request
+init|=
+operator|new
+name|V2Request
+operator|.
+name|Builder
+argument_list|(
+name|path
+argument_list|)
+operator|.
+name|withMethod
+argument_list|(
+name|SolrRequest
+operator|.
+name|METHOD
+operator|.
+name|POST
+argument_list|)
+operator|.
+name|withPayload
+argument_list|(
+name|payload
+argument_list|)
+operator|.
+name|build
+argument_list|()
+decl_stmt|;
+name|v2Request
+operator|.
+name|setResponseParser
+argument_list|(
+name|responseParser
+argument_list|)
+expr_stmt|;
+name|V2Response
+name|response
+init|=
+name|v2Request
+operator|.
+name|process
+argument_list|(
+name|cluster
+operator|.
+name|getSolrClient
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|getStatus
+argument_list|(
+name|response
+argument_list|)
+argument_list|,
+name|expectedCode
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testException
+specifier|public
+name|void
+name|testException
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|String
+name|notFoundPath
+init|=
+literal|"/c/"
+operator|+
+name|COLL_NAME
+operator|+
+literal|"/abccdef"
+decl_stmt|;
+name|String
+name|incorrectPayload
+init|=
+literal|"{rebalance-leaders: {maxAtOnce: abc, maxWaitSeconds: xyz}}"
+decl_stmt|;
+name|testException
+argument_list|(
+operator|new
+name|XMLResponseParser
+argument_list|()
+argument_list|,
+literal|404
+argument_list|,
+name|notFoundPath
+argument_list|,
+name|incorrectPayload
+argument_list|)
+expr_stmt|;
+name|testException
+argument_list|(
+operator|new
+name|DelegationTokenResponse
+operator|.
+name|JsonMapResponseParser
+argument_list|()
+argument_list|,
+literal|404
+argument_list|,
+name|notFoundPath
+argument_list|,
+name|incorrectPayload
+argument_list|)
+expr_stmt|;
+name|testException
+argument_list|(
+operator|new
+name|BinaryResponseParser
+argument_list|()
+argument_list|,
+literal|404
+argument_list|,
+name|notFoundPath
+argument_list|,
+name|incorrectPayload
+argument_list|)
+expr_stmt|;
+name|testException
+argument_list|(
+operator|new
+name|XMLResponseParser
+argument_list|()
+argument_list|,
+literal|400
+argument_list|,
+literal|"/c/"
+operator|+
+name|COLL_NAME
+argument_list|,
+name|incorrectPayload
+argument_list|)
+expr_stmt|;
+name|testException
+argument_list|(
+operator|new
+name|BinaryResponseParser
+argument_list|()
+argument_list|,
+literal|400
+argument_list|,
+literal|"/c/"
+operator|+
+name|COLL_NAME
+argument_list|,
+name|incorrectPayload
+argument_list|)
+expr_stmt|;
+name|testException
+argument_list|(
+operator|new
+name|DelegationTokenResponse
+operator|.
+name|JsonMapResponseParser
+argument_list|()
+argument_list|,
+literal|400
+argument_list|,
+literal|"/c/"
+operator|+
+name|COLL_NAME
+argument_list|,
+name|incorrectPayload
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|getStatus
+specifier|private
+name|long
+name|getStatus
+parameter_list|(
+name|V2Response
+name|response
+parameter_list|)
+block|{
+name|Object
+name|header
+init|=
+name|response
+operator|.
+name|getResponse
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|"responseHeader"
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|header
+operator|instanceof
+name|NamedList
+condition|)
+block|{
+return|return
+call|(
+name|int
+call|)
+argument_list|(
+operator|(
+name|NamedList
+operator|)
+name|header
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"status"
+argument_list|)
+return|;
+block|}
+else|else
+block|{
+return|return
+call|(
+name|long
+call|)
+argument_list|(
+operator|(
+name|Map
+operator|)
+name|header
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"status"
+argument_list|)
+return|;
+block|}
 block|}
 annotation|@
 name|Test
