@@ -1427,6 +1427,37 @@ argument_list|(
 name|method
 argument_list|,
 name|processor
+argument_list|,
+name|isV2ApiRequest
+argument_list|(
+name|request
+argument_list|)
+argument_list|)
+return|;
+block|}
+DECL|method|isV2ApiRequest
+specifier|private
+name|boolean
+name|isV2ApiRequest
+parameter_list|(
+specifier|final
+name|SolrRequest
+name|request
+parameter_list|)
+block|{
+return|return
+name|request
+operator|instanceof
+name|V2Request
+operator|||
+name|request
+operator|.
+name|getPath
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+literal|"/____v2"
 argument_list|)
 return|;
 block|}
@@ -1655,6 +1686,11 @@ argument_list|(
 name|method
 argument_list|,
 name|processor
+argument_list|,
+name|isV2ApiRequest
+argument_list|(
+name|request
+argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -2823,6 +2859,10 @@ parameter_list|,
 specifier|final
 name|ResponseParser
 name|processor
+parameter_list|,
+specifier|final
+name|boolean
+name|isV2Api
 parameter_list|)
 throws|throws
 name|SolrServerException
@@ -3403,6 +3443,9 @@ operator|!=
 name|HttpStatus
 operator|.
 name|SC_OK
+operator|&&
+operator|!
+name|isV2Api
 condition|)
 block|{
 name|NamedList
